# Agents-Hefesto

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mailmap  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  DISCOVERABILITY_PLAN.md  Dockerfile  Dockerfile.action  FINAL_REPORT.md  INTEGRATION_AUDIT.md  IRIS_ANALYSIS_REPORT.md  LAUNCH_CHECKLIST.md  LICENSE  MANIFEST.in  MEMORY.md  NEXT_STEPS.txt  PROMPT_DISCOVERABILITY.md  PYPI_UPLOAD_INSTRUCTIONS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY_v4.0.1.md  REPOSITORY_SUMMARY.md  SECURITY.md  SECURITY_MIGRATION_REPORT.md  SECURITY_MODEL.md  TECHNICAL_DEBT.md  action.yml  build_grammars.py  capabilities.yml  debug_import.py  debug_regex.py  docker-compose.yml  failing_log.txt  llms.txt  pyproject.toml  (+16 more)
.github/: FUNDING.yml  copilot-instructions.md
.well-known/: agent-card.json
benchmark/: anthropic_report.md
docs/: ADVANCED_VALIDATION.md  ANALYSIS_RULES.md  API_ARCHITECTURE.md  API_IMPLEMENTATION_PLAN.md  API_REFERENCE.md  BIGQUERY_SCHEMA.sql  BIGQUERY_SETUP_GUIDE.md  CLAUDE_HEFESTO.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN_COMPETITIVE_FEATURES.md  INSTALLATION.md  INTEGRATION.md  LICENSE_ACTIVATION.md  LICENSE_GATES.md  MANUAL_FULFILLMENT.md  OMEGA_GUARDIAN_SETUP.md  OMEGA_GUARDIAN_USAGE.md  PRO_OPTIONAL_FEATURES.md  QUICK_START.md  STRIPE_SETUP.md  ai-discovery.md
examples/: basic_usage.py  pre_commit_hook.py  pro_semantic_analysis.py
hefesto/: __init__.py  __version__.py  pro_optional.py  server.py
iris/: DEPLOYMENT.md  Dockerfile  INTEGRATION_COMPLETE.md  Makefile  QBENCH_IRIS_HEFESTO.md  README.md  README_HEFESTO_IRIS_INTEGRATION.md  README_IRIS_HEFESTO_INTEGRATION.md  __init__.py  cli.py  deploy_cloud_run.sh  requirements.txt
landing/: README.md  index.html  llms.txt  middleware.js  robots.txt  sitemap.xml  vercel.json
omega/: __init__.py  __version__.py  cli.py
scripts/: README.md  action_entrypoint.sh  capture_analysis.sh  deploy_cloudrun.sh  fulfill_order.py  generate_key.py  guard_public_repo.py  install-hooks.sh  prepush_gate.sh  run_checks.sh  smoke_test.sh  test_e2e.sh  traffic_report.py  validate_aggregates_jsonl.py  verify_capabilities.py  verify_critical.py  verify_readme.py  verify_release_tag.py
skill/: SKILL.md  commands.md  integration.md  issue_types.md  reliability_drift.md  semantic_drift.md
tests/: __init__.py  conftest.py  test_assert_precision_phase1c.py  test_bare_except_phase1c.py  test_budget_tracker.py  test_ci_parity_analyzer.py  test_cobol_detection.py  test_cobol_governance.py  test_datastore.py  test_engine_analyze_files.py  test_feedback_logger.py  test_groovy_jenkins_analyzer.py  test_json_analyzer.py  test_json_output_puro.py  test_license_validator.py  test_makefile_analyzer.py  test_memory_budget_gate.py  test_narrow_semantic.py  test_operational_truth.py  test_parser_failures.py  test_patch_c_api_hardening.py  test_patch_d_gate_and_eval.py  test_patch_e_exclude_types.py  test_patch_f_install_hooks.py  test_pickle_precision_phase1c.py  test_powershell_analyzer.py  test_pr_review_cli.py  test_pr_review_dedup.py  test_pr_review_diff.py  test_pr_review_orchestrator.py  test_pr_review_post_body.py  test_pr_review_schema_contract.py  test_pro_wiring.py  test_resource_safety_v1.py  (+11 more)
(+217 files in other folders)
