[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hefesto-ai"
version = "4.9.2"
description = "AI-Powered Code Quality Guardian - Static Analysis & Security Scanning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Narapa LLC", email = "sales@narapallc.com"}
]
maintainers = [
    {name = "Narapa LLC", email = "sales@narapallc.com"}
]
keywords = ["ai", "code-quality", "refactoring", "security", "static-analysis", "devtools"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "radon>=6.0.1,<7.0.0",
    "bandit>=1.7.5,<2.0.0",
    "vulture>=2.10,<3.0.0",
    "pylint>=3.0.0,<4.0.0",
    "mccabe>=0.7.0,<1.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "tree-sitter>=0.20.0,<1.0.0",
]
[project.optional-dependencies]
ci = [
    "pyyaml>=6.0,<7.0",
    "packaging>=23.0,<25.0",
    "tomli>=2.0.1,<3.0.0 ; python_version < '3.11'",
]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black==26.1.0",
    "isort==6.1.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "packaging>=23.0,<25.0",
    "tomli>=2.0.1,<3.0.0 ; python_version < '3.11'",
    "types-PyYAML>=6.0,<7.0",
]
[project.scripts]
hefesto = "hefesto.cli.main:cli"

[project.urls]
Homepage = "https://github.com/artvepa80/Agents-Hefesto"
Documentation = "https://github.com/artvepa80/Agents-Hefesto#readme"
Repository = "https://github.com/artvepa80/Agents-Hefesto"
Issues = "https://github.com/artvepa80/Agents-Hefesto/issues"

[tool.setuptools.packages.find]
include = ["hefesto*"]
exclude = [
    "hefesto.api*",
    "hefesto.llm*",
    "hefesto.licensing*",
    "hefesto.omega*",
    "hefesto.aegis*",
    "tests*",
    "tests_pro*",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
required-version = "26.1.0"
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=hefesto --cov-report=html --cov-report=term"

# Custom markers for different test categories
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that may require external services",
    "slow: Tests that take significant time to run",
]
